# SC2470-UHDExtension

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
example/: rfnoc.cpp  usrp.cpp
include/: CMakeLists.txt
include/sc2470/: sc2470.hpp
lib/: CMakeLists.txt  sc2470_constants.hpp  sc2470_expert.cpp  sc2470_expert.hpp  sc2470_impl.cpp  sc2470_impl.hpp  version.cpp  version.hpp
lib/types/: daughterboard.hpp  path.hpp
lib/udc/: protocol.hpp  udc_ctrl.cpp  udc_ctrl.hpp  udc_phy.cpp  udc_phy.hpp
lib/utility/: float_util.cpp  float_util.hpp  range_util.cpp  range_util.hpp  version.hpp
